--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "serve jstoolchain",
     "dev": "watch-http-server jstoolchain",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/erenard/presentation#readme",
   "dependencies": {
+    "serve": "^6.4.8",
     "watch-http-server": "^0.7.6"
   }
 }
