--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "serve jstoolchain",
-    "dev": "watch-http-server jstoolchain",
+    "dev": "watch-http-server -p 8090 jstoolchain",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
