--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "serve jstoolchain",
-    "dev": "watch-http-server -p 8090 jstoolchain",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +18,6 @@
   },
   "homepage": "https://github.com/erenard/presentation#readme",
   "dependencies": {
-    "serve": "^6.4.8",
-    "watch-http-server": "^0.7.6"
+    "serve": "^6.4.8"
   }
 }
